--- a/Assets/style.css
+++ b/Assets/style.css
@@ -32,4 +32,29 @@
 
 span {
     margin-left: 5px;
+    height: fit-content;
+    width: auto;
 }
+
+.searchHistory {
+    padding-left: 0;
+    list-style: none;
+}
+
+.card-body {
+    width: 100%;
+    text-transform:capitalize;
+}
+
+/* severity colors */
+/* .low{
+    background-color: green;
+}
+
+.moderate {
+    background-color: yellow;
+}
+
+.high{
+    background-color: red;
+} */
